--- a/resources/views/admin/orders.ejs
+++ b/resources/views/admin/orders.ejs
@@ -7,7 +7,7 @@
                    <th class = "px-4 py-2 text-left">Orders</th>
                    <th class = "px-4 py-2 text-left">Customer</th>
                    <th class = "px-4 py-2 text-left">Address</th>
-                   <th class = "px-4 py-2 text-left">status</th>
+                   <th class = "px-4 py-2 text-left">Status</th>
                    <th class = "px-4 py-2 text-left">Placed At</th>
                </tr>
            </thead>
